--- a/index.html
+++ b/index.html
@@ -1,108 +1,123 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>HTML JAFWC</title>
-        <link rel="stylesheet" href="css/estilos.css">
-    </head>
-    <body>
-        <h1>FORMULARIO</h1>
-        <p id="parrafo">Formulario de inscripcion de clienetes para la Papeleria JAFWC</p>
+
+<head>
+    <title>HTML JAFWC</title>
+    <link rel="stylesheet" href="css/estilos.css">
+</head>
+
+<body>
+    <h1>FORMULARIO</h1>
+    <p id="parrafo">Formulario de inscripcion de clienetes para la Papeleria JAFWC</p>
+    <div id="contend">
         <form id="formulario" action="https://google.com" method="get" target="_blank">
-            <table>
-                <tr>
-                    <td><label for="nombre">Nombre: </label></td>
-                    <td><input type="text" id="nombre" name="nombre"/></td>
-                </tr>
-                <tr>
-                    <td><label for="mail">Email: </label></td>
-                    <td><input type="email" id="mail" name="mail"/></td>
-                </tr>
-                <tr>
-                    <td><label for="edad">Edad: </label></td>
-                    <td><input type="number" max="100" id="edad" name="edad"/></td>
-                </tr>
-                <tr>
-                    <td><label for="color">Color Favorito: </label></td>
-                    <td><input type="color" id="color" name="color"/></td>
-                </tr>
-                <tr>
-                    <td><label for="fecha">Fecha: </label></td>
-                    <td><input type="date" id="fecha" name="fecha"/></td>
-                </tr>
-                <tr>
-                    <td><label for="Semana">Semana:</label></td>
-                    <td><input type="week" id="semana" name="semana"></td>
-                </tr>
-                <tr>
-                    <td><label for="furl">url:</label></td>
-                    <td><input type="url" id="furl" name="furl"></td>
-                </tr>
-                <tr>
-                    <td><label for="archivo">Archivo: </label></td>
-                    <td><<input type="file" id="archivo" name="archivo"></td>
-                </tr>
+            <div id="left">
+                <table>
+                    <tr>
+                        <td><label for="nombre">Nombre: </label></td>
+                        <td><input type="text" id="nombre" name="nombre" /></td>
+                    </tr>
+                    <tr>
+                        <td><label for="mail">Email: </label></td>
+                        <td><input type="email" id="mail" name="mail" /></td>
+                    </tr>
+                    <tr>
+                        <td><label for="edad">Edad: </label></td>
+                        <td><input type="number" max="100" id="edad" name="edad" /></td>
+                    </tr>
+                    <tr>
+                        <td><label for="color">Color Favorito: </label></td>
+                        <td><input type="color" id="color" name="color" /></td>
+                    </tr>
+                    <tr>
+                        <td><label for="fecha">Fecha: </label></td>
+                        <td><input type="date" id="fecha" name="fecha" /></td>
+                    </tr>
+                    <tr>
+                        <td><label for="Semana">Semana:</label></td>
+                        <td><input type="week" id="semana" name="semana"></td>
+                    </tr>
+                    <tr>
+                        <td><label for="furl">url:</label></td>
+                        <td><input type="url" id="furl" name="furl"></td>
+                    </tr>
+                    <tr>
+                        <td><label for="archivo">Archivo: </label></td>
+                        <td>
+                            <<input type="file" id="archivo" name="archivo">
+                        </td>
+                    </tr>
+
+                    <tr>
+                        <td><label for="recibir">Recibir Notificacion: </label></td>
+                        <td><input type="checkbox" id="recibir" name="recibir" /></td>
+                    </tr>
+                    <tr>
+                        <td><label for="ciudades">Ciudades: </label></td>
+                        <td>
+                            <select name="ciudades" id="ciudades">
+                                <option value="1">Bogota</option>
+                                <option value="2">Cali</option>
+                                <option value="3">Bucaramanga</option>
+                                <option value="4">Medellin</option>
+                                <option value="5">Popayan</option>
+                            </select>
+                        </td>
+                    </tr>
+                </table>
+            </div>
+            <div id="right">
+                <table>
+                    <tr>
+                        <td><label for="clave">Contraseña: </label></td>
+                        <td><input type="password" id="clave" name="clave" /></td>
+                    </tr>
+                    <tr>
+                        <td><label for="custId">Id Oculto: </label></td>
+                        <td><input type="hidden" id="custId" name="custId" value="3487"></td>
+                    </tr>
+                    <tr>
+                        <td><label for="gsearch">Search Google:</label></td>
+                        <td><input type="search" id="gsearch" name="gsearch"></td>
+                    </tr>
+
+                    <tr>
+                        <td><label for="quantity">Numero (entre 1 and 5):</label></td>
+                        <td><input type="number" id="quantity" name="quantity" min="1" max="5"></td>
+                    </tr>
+
+                    <tr>
+                        <td><label for="vol">Volume (entre 0 and 50):</label></td>
+                        <td><input type="range" id="vol" name="vol" min="0" max="50"></td>
+                    </tr>
+                    <tr>
+                        <td><label for="bdaymonth">Birthday (month and year):</label></td>
+                        <td><input type="month" id="bdaymonth" name="bdaymonth"></td>
+                    </tr>
+                    <tr>
+                        <td><label for="quantity">Quantity:</label></td>
+                        <td><input type="number" id="quantity" name="quantity" min="0" max="100" step="10" value="30">
+                        </td>
+                    </tr>
+                    <tr>
+                        <td><label for="phone">Enter your phone number:</label></td>
+                        <td><input type="tel" id="phone" name="phone" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}"></td>
+                    </tr>
+                    <tr>
+                        <td><label for="appt">Select a time:</label></td>
+                        <td><input type="time" id="appt" name="appt"></td>
+                    </tr>
+                    <tr>
+                        <td colspan="2">
+                            <input type="submit" value="Enviar">
+                            <input type="reset" value="Limpiar">
+                        </td>
+                    </tr>
+                </table>
+            </div>
             
-                <tr>
-                    <td><label for="recibir">Recibir Notificacion: </label></td>
-                    <td><input type="checkbox" id="recibir" name="recibir"/></td>
-                </tr>
-                <tr>
-                    <td><label for="ciudades">Ciudades: </label></td>
-                    <td>
-                        <select name="ciudades" id="ciudades">
-                            <option value="1">Bogota</option>
-                            <option value="2">Cali</option>
-                            <option value="3">Bucaramanga</option>
-                            <option value="4">Medellin</option>
-                            <option value="5">Popayan</option>
-                        </select>                        
-                    </td>                    
-                </tr>
-                <tr>
-                    <td><label for="clave">Contraseña: </label></td>
-                    <td><input type="password" id="clave" name="clave"/></td>
-                </tr>
-                <tr>
-                    <td><label for="custId">Id Oculto: </label></td>
-                    <td><input type="hidden" id="custId" name="custId" value="3487"></td>
-                </tr>
-                <tr>
-                    <td><label for="gsearch">Search Google:</label></td>
-                    <td><input type="search" id="gsearch" name="gsearch"></td>
-                </tr>
-
-                <tr>
-                    <td><label for="quantity">Numero (entre 1 and 5):</label></td>
-                    <td><input type="number" id="quantity" name="quantity" min="1" max="5"></td>
-                </tr>
-
-                <tr>
-                    <td><label for="vol">Volume (entre 0 and 50):</label></td>
-                    <td><input type="range" id="vol" name="vol" min="0" max="50"></td>
-                </tr>
-                <tr>
-                    <td><label for="bdaymonth">Birthday (month and year):</label></td>
-                    <td><input type="month" id="bdaymonth" name="bdaymonth"></td>
-                </tr>
-                <tr>
-                    <td><label for="quantity">Quantity:</label></td>
-                    <td><input type="number" id="quantity" name="quantity" min="0" max="100" step="10" value="30"></td>
-                </tr>
-                <tr>
-                    <td><label for="phone">Enter your phone number:</label></td>
-                    <td><input type="tel" id="phone" name="phone" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}"></td>
-                </tr>
-                <tr>
-                    <td><label for="appt">Select a time:</label></td>
-                    <td><input type="time" id="appt" name="appt"></td>
-                </tr>
-                <tr>
-                    <td colspan="2">
-                        <input type="submit" value="Enviar">
-                        <input type="reset" value="Limpiar">
-                    </td>
-                </tr>
-            </table>
         </form>
-    </body>
+    </div>
+</body>
+
 </html>
