--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>HTML JAFWC</title>
+    <title>PROYECTO PAPELERIA JAFWC</title>
     <link rel="stylesheet" href="css/estilos.css">
 </head>
 
