--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
 </head>
 
 <body>
-    <h1>FORMULARIO</h1>
+    <h1>FORMULARIO UNO </h1>
     <p id="parrafo">Formulario de inscripcion de clienetes para la Papeleria JAFWC</p>
     <div id="contend">
         <form id="formulario" action="https://google.com" method="get" target="_blank">
             <div id="left">
                 <table>
                     <tr>
-                        <td><label for="nombre">Nombre: </label></td>
+                        <td><label for="nombre">Nombre del Cliente: </label></td>
                         <td><input type="text" id="nombre" name="nombre" /></td>
                     </tr>
                     <tr>
@@ -100,7 +100,7 @@
                         </td>
                     </tr>
                     <tr>
-                        <td><label for="phone">Enter your phone number:</label></td>
+                        <td><label for="phone">Ingrese su numero de telefono:</label></td>
                         <td><input type="tel" id="phone" name="phone" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}"></td>
                     </tr>
                     <tr>
