modificando el index

--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html>
 
 <head>
-    <title>Proyecto Papelería JAFWC SAS</title>
+    <title>Proyecto Papelería JAFWC</title>
     <link rel="stylesheet" href="css/estilos.css">
 </head>
 
 <body>
     <h1>FORMULARIO UNO </h1>
-    <p id="parrafo">Formulario de inscripcion de clienetes para la Papeleria JAFWC</p>
+    <p id="párrafo">Formulario de inscripción de clientes para la Papelería JAFWC</p>
     <div id="contend">
         <form id="formulario" action="https://google.com" method="get" target="_blank">
             <div id="left">
@@ -49,18 +49,18 @@
                     </tr>
 
                     <tr>
-                        <td><label for="recibir">Recibir Notificacion: </label></td>
+                        <td><label for="recibir">Recibir Notificación: </label></td>
                         <td><input type="checkbox" id="recibir" name="recibir" /></td>
                     </tr>
                     <tr>
                         <td><label for="ciudades">Ciudades: </label></td>
                         <td>
                             <select name="ciudades" id="ciudades">
-                                <option value="1">Bogota</option>
+                                <option value="1">Bogotá</option>
                                 <option value="2">Cali</option>
                                 <option value="3">Bucaramanga</option>
-                                <option value="4">Medellin</option>
-                                <option value="5">Popayan</option>
+                                <option value="4">Medellín</option>
+                                <option value="5">Popayán</option>
                             </select>
                         </td>
                     </tr>
@@ -82,7 +82,7 @@
                     </tr>
 
                     <tr>
-                        <td><label for="quantity">Numero (entre 1 and 5):</label></td>
+                        <td><label for="quantity">Número (entre 1 and 5):</label></td>
                         <td><input type="number" id="quantity" name="quantity" min="1" max="5"></td>
                     </tr>
 
@@ -100,7 +100,7 @@
                         </td>
                     </tr>
                     <tr>
-                        <td><label for="phone">Ingrese su numero de telefono:</label></td>
+                        <td><label for="phone">Ingrese su número de teléfono:</label></td>
                         <td><input type="tel" id="phone" name="phone" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}"></td>
                     </tr>
                     <tr>
