ajustando archivos html

--- a/index.html
+++ b/index.html
@@ -45,43 +45,43 @@
             <div class="row">
                 <div id="columna" class="column" style="margin-left: 12%;">
                     <div><img id="logo" src="img/agendas.jpg"></div>
-                    <div> AGENDAS </div>
+                    <div> Agendas </div>
                 </div>
                 <div id="columna" class="column">
-                    <div><img id="logo" src="img/boligrafo.png"></div>
-                    <div>LAPICES</div>
+                    <div><img id="logo" src="img/blocks.jpg"></div>
+                    <div>Blocks</div>
                 </div>
                 <div id="columna" class="column">
-                    <div><img id="logo" src="img/regla.jpg"></div>
-                    <div>REGLAS</div>
+                    <div><img id="logo" src="img/cuadernos.png"></div>
+                    <div>Cuadernos</div>
                 </div>
             </div>
             <div class="row">
                 <div id="columna" class="column" style="margin-left: 12%;">
-                    <div><img id="logo" src="img/agendas.jpg"></div>
-                    <div> AGENDAS </div>
+                    <div><img id="logo" src="img/escuadras.jpg"></div>
+                    <div> Escuadras </div>
                 </div>
                 <div id="columna" class="column">
-                    <div><img id="logo" src="img/boligrafo.png"></div>
-                    <div>LAPICES</div>
+                    <div><img id="logo" src="img/lapices.jpg"></div>
+                    <div>Lapices</div>
                 </div>
                 <div id="columna" class="column">
-                    <div><img id="logo" src="img/regla.jpg"></div>
-                    <div>REGLAS</div>
+                    <div><img id="logo" src="img/cinta.jpg"></div>
+                    <div>Cinta</div>
                 </div>
             </div>
             <div class="row">
                 <div class="column" style="margin-left: 12%;">
-                    <div><img id="logo" src="img/agendas.jpg"></div>
-                    <div> AGENDAS </div>
+                    <div><img id="logo" src="img/temperas.png"></div>
+                    <div> Temperas </div>
+                </div>
+                <div class="column">
+                    <div><img id="logo" src="img/marcadores.jpg"></div>
+                    <div>Marcadores</div>
                 </div>
                 <div class="column">
                     <div><img id="logo" src="img/boligrafo.png"></div>
-                    <div>LAPICES</div>
-                </div>
-                <div class="column">
-                    <div><img id="logo" src="img/regla.jpg"></div>
-                    <div>REGLAS</div>
+                    <div>Boligrafos</div>
                 </div>
             </div>
         </div>
