--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>Proyecto Papelería JAFWC</title>
-    <link rel="stylesheet" href="css/estilos.css">
+    <link rel="stylesheet" href="css/estilos.css">    
 </head>
 
 <body>
@@ -11,8 +11,8 @@
     <div id="cabecera">
         <header id="main-header">
             <a id="logo-header" href="#">
-                <span class="site-name">Papeleria JAFWC</span>
-                <span class="site-desc">Aplicacion en linea para la toma de sus pedidos</span>
+                <span class="site-name">Papelería JAFWC</span>
+                <span class="site-desc">Aplicación en línea para la toma de sus pedidos</span>
             </a> <!-- / #logo-header -->
 
             <nav>
@@ -30,58 +30,59 @@
         <div id="main-menu">
             <nav>
                 <ul>
-                    <li><a href="#">REGLAS</a></li>
+                    <li><a href="#">AGENDAS</a></li>
+                    <li><a href="#">BLOCKS</a></li>
+                    <li><a href="#">BOLIGRAFOS</a></li>
+                    <li><a href="#">CINTA</a></li>
                     <li><a href="#">CUADERNOS</a></li>
                     <li><a href="#">LAPICES</a></li>
-                    <li><a href="#">BLOCKS</a></li>
+                    <li><a href="#">MARCADORES</a></li>
                     <li><a href="#">REGLAS</a></li>
-                    <li><a href="#">ESCUADRAS</a></li>
-                    <li><a href="#">TEMPERAS</a></li>
-                    <li><a href="#">AGENDAS</a></li>                
+                    <li><a href="#">TEMPERAS</a></li>                
                 </ul>
             </nav>
         </div>
         <div class="container">
             <div class="row">
-                <div id="columna" class="column" style="margin-left: 12%;">
-                    <div><img id="logo" src="img/agendas.jpg"></div>
-                    <div> Agendas </div>
+                <div id="columna" class="column" style="margin-left: 16%;">
+                    <div><img id="logo" src="img/agendas.jpg"></div>                    
+                    <div>Agendas</div>                 
                 </div>
                 <div id="columna" class="column">
                     <div><img id="logo" src="img/blocks.jpg"></div>
                     <div>Blocks</div>
                 </div>
                 <div id="columna" class="column">
-                    <div><img id="logo" src="img/cuadernos.png"></div>
-                    <div>Cuadernos</div>
+                    <div><img id="logo" src="img/boligrafo.png"></div>
+                    <div>Boligrafos</div>
                 </div>
             </div>
             <div class="row">
-                <div id="columna" class="column" style="margin-left: 12%;">
-                    <div><img id="logo" src="img/escuadras.jpg"></div>
-                    <div> Escuadras </div>
+                <div id="columna" class="column" style="margin-left: 16%;">
+                    <div><img id="logo" src="img/cinta.jpg"></div>
+                    <div>Cinta</div>
+                </div>                        
+                <div id="columna" class="column">
+                    <div><img id="logo" src="img/cuadernos.png"></div>
+                    <div>Cuadernos</div>
                 </div>
                 <div id="columna" class="column">
                     <div><img id="logo" src="img/lapices.jpg"></div>
                     <div>Lapices</div>
                 </div>
-                <div id="columna" class="column">
-                    <div><img id="logo" src="img/cinta.jpg"></div>
-                    <div>Cinta</div>
-                </div>
             </div>
             <div class="row">
-                <div class="column" style="margin-left: 12%;">
-                    <div><img id="logo" src="img/temperas.png"></div>
-                    <div> Temperas </div>
-                </div>
-                <div class="column">
+                <div id="columna" class="column" style="margin-left: 16%;">
                     <div><img id="logo" src="img/marcadores.jpg"></div>
                     <div>Marcadores</div>
+                </div>                       
+                <div id="columna" class="column">
+                    <div><img id="logo" src="img/regla.jpg"></div>
+                    <div>Reglas</div>
                 </div>
-                <div class="column">
-                    <div><img id="logo" src="img/boligrafo.png"></div>
-                    <div>Boligrafos</div>
+                <div id="columna" class="column">
+                    <div><img id="logo" src="img/temperas.png"></div>
+                    <div>Temperas</div>                
                 </div>
             </div>
         </div>
