--- a/inicio.html
+++ b/inicio.html
@@ -44,7 +44,7 @@
             
             <h3>SERVICIOS INSTITUCIONALES</h3>
 
-            <P>
+            <P id="px">
                 La papelería corporativa cimienta la identidad visual corporativa de toda la empresa y, cuando se ejecuta correctamente, se logra transmitir 
                 la personalidad de la marca a cualquier cliente.
                 Hojas membretadas, sobres impresos, carpetas con pestañas o sin pesatañas, tarjetas de presentación. Impresas en offset o impresión digital. Como lo necesites.
@@ -58,7 +58,7 @@
 
             <h3>QUIENES SOMOS</h3>
 
-            <P>PAPELERIA JAFWC somos una empresa de servicio que ofrece una gran variedad de artículos. Con entrega directamente en su empresa. Desde 2004 desempeñamos nuestra labor para satisfacer al cliente y que confíen en nuestra amplia gama de productos de primeras marcas.
+            <P id="px">PAPELERIA JAFWC somos una empresa de servicio que ofrece una gran variedad de artículos. Con entrega directamente en su empresa. Desde 2004 desempeñamos nuestra labor para satisfacer al cliente y que confíen en nuestra amplia gama de productos de primeras marcas.
 
                 Papelería, todo lo necesario para la oficina en cuanto a manipulados del papel, escritura, y demás accesorios para su oficina.
                 Mobiliario y Maquinas de Oficina, tanto como mesas, sillas, armarios, archivadores, estanterías y mucho más,   como también destructoras, encuadernadoras, Contadores de billetes, Calculadoras,   plastificadoras,  etiquetadoras, cajas registradoras, entre otros.
@@ -69,13 +69,13 @@
 
                 <h3>MISION</h3>
 
-                <P>
+                <P id="px">
                 Seguir posicionando en el mercado la marca JAFWC a través de sus servicios y del incremento e innovación en los mismos, para entregarle a nuestros clientes lo mejor de sus productos y la asesoría de un grupo de talento humano que cada dia se capacita para darle solución a sus necesidades.es una empresa de servicio, preocupada por la constante innovación y modernización de sus productos y materiales en general, en lo que se refiere a artículos escolares, regalos y materiales para maquetas, ofreciendo una eficiente atención a nuestros clientes con responsabilidad, seguridad y eficiencia; garantizándoles su satisfacción y a su vez obtener un crecimiento, prestigio y reconocimiento en el mercado papelero a nivel regional, orientada a complacer cada día más necesidades de nuestros clientes y público en general.
 
             
                 </P>
                 <h3>VISION</h3>
-                <P>
+                <P id="px">
                 PAPELERIA JAFWC se pocicionara en la mente de los consumidores como una de las empresas lideres en el mercado de productos papeleros e impresiones digitales, ademasaspira ser reconocida como una empresa líder con la finalidad de desarrollarse a nivel Bajio  como una de las mas reconocidas dentro del rubro Papelero del centro del país, creando nuevas sucursales en las distintas entidades, distinguiéndose ante el mercado como el único y más grande en el ramo de papelería.   
                 </P>
         </div>
