--- a/inicio.html
+++ b/inicio.html
@@ -83,7 +83,7 @@
 
     <div class="modal" id="id01"> <!-- modal para el acceso-->
   
-        <form class="modal-content animate" action="/action_page.php" method="post">
+        <form class="modal-content animate" action="vue-hello-world\index.html" method="post">
           <div class="imgcontainer">
             <span class="close" title="Close Modal" onclick="document.getElementById('id01').style.display='none'">&times;</span>
             <img class="avatar" src="img/img_avatar2.png" alt="Avatar">
