--- a/contacto.html
+++ b/contacto.html
@@ -124,7 +124,7 @@
 
     <div id="id01" class="modal"> <!-- modal para el acceso-->
   
-        <form class="modal-content animate" action="/action_page.php" method="post">
+        <form class="modal-content animate" action="vue-hello-world\index.html" method="post">
           <div class="imgcontainer">
             <span onclick="document.getElementById('id01').style.display='none'" class="close" title="Close Modal">&times;</span>
             <img src="img/img_avatar2.png" alt="Avatar" class="avatar">
